[package]
name = "pt"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/MusicalNinjaDad/pt"
authors = ["MusicalNinjaDad <102677655+MusicalNinjaDad@users.noreply.github.com>"]
license = "MIT"

[dependencies]
indexmap = "2.13.0"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git"}
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git"}
