[package]
name = "pt"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/MusicalNinjaDad/pt"
authors = [
    "MusicalNinjaDad <102677655+MusicalNinjaDad@users.noreply.github.com>",
]
license = "MIT"

[dependencies]
base-traits = "0.0.13"
exit_safely = "0.1.0"
indexmap = "2.13.0"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git" }
try_v2 = "0.3.3"

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.8.2"
escargot = "0.5.15"
predicates = "3.1.0"

[[bench]]
name = "bench"
harness = false
